# rs-hsi-botany

./: .Rhistory  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: en_situ_eda.ipynb  enmap_download.ipynb  enmap_download_selenium.ipynb  enmap_explore_cp.ipynb  enmap_sjer_eda.ipynb  ferp_eda.ipynb  fia_eda.ipynb  gbif.ipynb  ml_classifier.ipynb  model_selection.ipynb  neon_playground.ipynb  neon_utilities.ipynb  ofo_eda.ipynb  pine_eda.ipynb  sjer_plots.ipynb  spectral_instrument_overview.ipynb  yfdp.ipynb
r_files/: rfia_eda.Rmd
