[project]
name = "hrs-botany"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "cartopy>=0.24.1",
    "contextily>=1.6.2",
    "dask-ml>=2025.1.0",
    "datashader>=0.18.0",
    "gdal>=3.10.3",
    "geopandas>=1.0.1",
    "geoviews>=1.14.0",
    "h5py>=3.13.0",
    "holoviews>=1.20.2",
    "hvplot>=0.11.2",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "ipywidgets>=8.1.6",
    "jupyter-bokeh>=4.0.5",
    "matplotlib>=3.10.1",
    "neonutilities>=1.0.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "rioxarray>=0.18.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sklearn-xarray>=0.4.0",
    "xarray>=2025.3.1",
    "xgboost>=3.0.0",
]
